--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,35 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  
+  	<div class="top-btn">  	
+		<button ion-button (click)="toLogin()">Login</button>
+		<button ion-button (click)="toRegister()">Register</button>
+	</div>
+	<br>
+	<br>
+
+  	<p>To my first page</p>
+	<button ion-button full color="light" (click)="openFirstPage()">Click me</button>
+	<br/>
+	<br/>
+
+	<ion-list>
+
+		<ion-item>
+			<ion-label floating>Username</ion-label>
+			<ion-input type="text" #username></ion-input>
+		</ion-item>
+
+		<ion-item>
+			<ion-label floating>Password</ion-label>
+			<ion-input type="password" #password></ion-input>
+		</ion-item>
+
+	</ion-list>
+
+	<div padding>
+		<button ion-button full color="light" (click)="signIn()">Sign In</button>
+	</div>
+
 </ion-content>
